/*
 * $Id: ChangeLog,v 1.1345 2003/08/13 02:28:41 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-08-13 16:50 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbexprb.c
    ! Fixed HB_P_ARRAYPUSH to force MEMVAR context for non declared variable.

2003-08-12 19:27 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rdd/dbcmd.c
    * Formating.

  * contrib/rdd_ads/ads1.c
    ! fixed typo and formted.

2003-08-12 17:16 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * contrib/rdd_ads/ace.h
    ! Fixed definition of ENTRYPOINT - Brian we probably need to report this to Exetnded Systems (appears to be a typo!).

  * contrib/rdd_ads/ads1.c
    ! Fixed possible GPF, and added few commented debuging TraceLog().

  * source/vm/arrays.c
    - Removed redundant lines from hb_arrayDel()

  * tests/ads.prg
    ! Minor corrections.

  * tests/pp.prg
  * tests/rp_dot.ch
    + Added support for:
        CD <NewDir> in Dot Prompt mode.

2003-08-12 16:30 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * bin/bld.bat
    + Added support for an env var ADS_LIBS

  * source/rtl/set.c
    ! fixed compilation errors under MSVC.

  * tests/ads.prg
    ! Minor corrections.

2003-08-12 12:45 UTC-0800 Brian Hays <bhays@abacuslaw.com>
  * xharbour/contrib/libmisc/Makefile.bc
   * dbftools.c (FIELDTYPE(), FIELDSIZE(), FIELDDECI()) moved from
     libmisc to libct

2003-08-12 01:02 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rdd/workarea.c
   ! yet another bug in dbeval() fixed for nNext < 0

2003-08-12 01:02 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rdd/workarea.c
   ! fixed bug in dbeval()

2003-08-11 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/tget.prg
    ! Fix behavior in picture functions.
      Ex: @5,5 Get nVar picture "@B9999"
